Changed some stuff

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-    font-family: "IM Fell Double Pica";
+    font-family: 'IM Fell Double Pica';
     font-size: 2.05em;
     line-height: 0.65em;
     float: left;
@@ -50,7 +50,7 @@ h1 {
     margin: 0px;
     list-style: none;
     border-right: dotted 1px #0c4f8b;
-    font-family: "Julius Sans One";
+    font-family: 'Julius Sans One';
     font-weight: bold;
 }
 
