--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 .contentwrapper {
-    background-color: rgba(235, 240, 245, 0.5);
+    background: rgba(235, 240, 245, 0.5);
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     margin-top: -20vh;
