--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,14 @@ h1 {
 h2, h3 {
     font-family: "IM Fell Double Pica", serif;
     text-align: center;
+    background-color: #1c4971;
+    background-image: url(images/blue_transparency.png);
+    background-color: rgba(235, 240, 245, 0.5);
+    padding: 5px;
+}
+
+h3 {
+    font-size: 1.5em;
 }
 
 .navbar {
@@ -85,4 +93,11 @@ h2, h3 {
     width: 70%;
     height: 71.7vh;
     padding: 20px;
+}
+
+p {
+    font-family: Helvetica, sans-serif;
+    width: 95%;
+    text-align: justify;
+    margin-left: 2.5%;
 }
