--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,11 @@ h1 {
 h2, h3 {
     font-family: "IM Fell Double Pica", serif;
     text-align: center;
-    background-color: #1c4971;
+    background-color: #084d62;
     background-image: url(images/blue_transparency.png);
-    background-color: rgba(235, 240, 245, 0.5);
+    background-position: center;
     padding: 5px;
+    color: #fefefe;
 }
 
 h3 {
@@ -64,7 +65,6 @@ h3 {
     list-style: none;
     border-right: dotted 1px #0c4f8b;
     font-family: "Julius Sans One", sans-serif;
-    font-weight: bold;
 }
 
 .navbar li:last-child {
@@ -73,11 +73,12 @@ h3 {
 
 .navbar li a {
     color: #0c4f8b;
+    font-weight: bolder;
 }
 
 .banner {
     background-image: url(images/geometric_blue02.jpg);
-    image-orientation: bottom;
+    background-position: center;
     width: 100%;
     height: 35vh;
     border-top: 20px solid #031729;
