--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ h3 {
     border-top-right-radius: 25px;
     margin-top: -20vh;
     margin-left: 15%;
+    min-height: 71.7vh;
     width: 70%;
-    height: 71.7vh;
     padding: 20px;
 }
 
