--- a/CS_460_Software_Engineering/HW1/css/styles.css
+++ b/CS_460_Software_Engineering/HW1/css/styles.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Patrick+Hand+SC);
+@import url(//fonts.googleapis.com/css?family=Patrick+Hand+SC);
 
 body {
     color: #311;
@@ -10,6 +10,10 @@ body {
     font-family: "Patrick Hand SC";
     padding-left: 25px;
     
+}
+
+a, a:hover {
+    color: #f96b5c;
 }
 
 h1 {
