--- a/CS_460_Software_Engineering/HW1/css/styles.css
+++ b/CS_460_Software_Engineering/HW1/css/styles.css
@@ -93,31 +93,35 @@ tr:nth-child(even) {
     background-color: #ffe;
 }
 
-.htmlCode {
+.htmlCode, .cssCode, .gitCode {
     background-color: #f8f9fa;
     padding: 10px;
     border-radius: 15px;
     border: solid 1px #411;
     color: #000;
     line-height: 1.25em;
-    max-width: 55em;
+    max-width: 70em;
+    margin-bottom: 10px;
 }
 
-.htmlCode code {
+code {
     color: #000;
-    margin-bottom: 10px;
 }
 
 .htmlTag {
     color: #083762;
 }
 
-.htmlClass {
+.htmlClass, .cssMeasure {
     color: #3a6508;
 }
 
-.htmlName {
+.htmlName, .cssValue {
     color: #ff9715;
+}
+
+.cssElement {
+    color: #8e44c1;
 }
 
 .col1 {
@@ -133,20 +137,6 @@ tr:nth-child(even) {
     padding-left: 13px;
 }
 
-.quote p {
-    font-family: "Times New Roman", serif;
-    margin-bottom: 0;
-}
-
-.quote p .first {
-    font-family: "Arial", sans-serif;
-    padding-left: 3em;
-}
-
 .tab {
     padding-left: 3em;
-}
-
-.quotation {
-    font-size: 2em;
 }
