Worked more on HW2, but nothing is working

--- a/CS_460_Software_Engineering/HW2/css/styles.css
+++ b/CS_460_Software_Engineering/HW2/css/styles.css
@@ -28,3 +28,11 @@ form {
     width: 2.5em;
     margin-left: 0.25em;
 }
+
+.multiInfo {
+    visibility: hidden;
+}
+
+.itemBonus {
+    visibility: hidden;
+}
