Still working on getting properly styled markdown

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,11 +25,13 @@ h1 {
     width: 100%;
     margin: 0;
     font-size: 200%;
+    font-weight: normal;
 }
 
 h2 {
     font-family: "Patrick Hand SC";
     font-size: 150%;
+    font-weight: normal;
 }
 
 nav ul {
