Still working on getting properly styled markdown

--- a/_layouts/hw1.html
+++ b/_layouts/hw1.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav>
-       <div class="navbar">
+       <section class="navbar">
           <h1>CS 460 Homework 1</h1>
            <ul>
             <li><a href="https://mcalawa.github.io/senior_project/CS_460_Software_Engineering/HW1/" class="active">Home</a></li>
