--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,10 @@
 
 @import url(//fonts.googleapis.com/css?family=Patrick+Hand+SC);
 
+* {
+    box-sizing: content-box;
+}
+
 body {
     color: #311;
 }
@@ -36,6 +40,7 @@ h2 {
 
 nav ul {
     margin-bottom: 0px;
+    display: contents;
 }
 
 nav li {
