--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,8 @@ h1 {
     font-size: 200%;
     font-weight: normal;
     line-height: 1.1;
+    -webkit-margin-before: 0.83em;
+    -webkit-margin-after: 0.83em;
 }
 
 h2 {
@@ -47,10 +49,12 @@ h2 {
     font-size: 150%;
     font-weight: normal;
     line-height: 1.1;
+    margin-top: 0;
 }
 
 nav ul {
-    margin-bottom: 0px;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 nav li {
