Still working on getting properly styled markdown

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,14 +38,14 @@ h1 {
     width: 100%;
     margin: 0;
     font-size: 200%;
-    font-weight: normal;
+    font-weight: 500;
     line-height: 1.1;
 }
 
 h2 {
     font-family: "Patrick Hand SC";
     font-size: 150%;
-    font-weight: normal;
+    font-weight: 500;
     line-height: 1.1;
     margin-top: 0;
 }
