Still working on getting properly styled markdown

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,10 @@
 
 body {
     color: #311;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    background-color: #fff;
 }
 
 .navbar {
