--- a/_layouts/hw1.html
+++ b/_layouts/hw1.html
@@ -21,7 +21,7 @@
             <li><a href="english.html">Words</a></li>
             <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
         </ul>
-       </div>
+       </section>
     </nav>
 
     <section class="content">
