Just fine tuning a few things

--- a/_layouts/hw2.html
+++ b/_layouts/hw2.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav>
-       <section class="navbar">\
+       <section class="navbar">
          <h1>CS 460 Homework 2</h1>
           <ul>
               <li><a href="https://mcalawa.github.io/senior_project/CS_460_Software_Engineering/HW2/">Home</a></li>
