Created a layout for the other pages. Ready to merge and start working on the next feature.

--- a/CS_460_Software_Engineering/HW4/Homework4/Homework4/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW4/Homework4/Homework4/Views/Home/Index.cshtml
@@ -8,11 +8,15 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- Main Style Sheet -->
+    <link rel="stylesheet" href="css/site.css">
     <title>CS 460 Homework 4</title>
 </head>
 <body>
     <nav>
-        <section class="navbar">
+        <div class="navbar">
             <h1>CS 460 Homework 4</h1>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -21,7 +25,11 @@
                 <li>@Html.ActionLink("Page 3", "Page3")</li>
                 <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
             </ul>
-        </section>
+        </div>
     </nav>
+
+    <div class="content">
+
+    </div>
 </body>
 </html>
