--- a/CS_460_Software_Engineering/HW4/Homework4/Homework4/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW4/Homework4/Homework4/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- Main Style Sheet -->
-    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="~/css/site.css">
     <title>CS 460 Homework 4</title>
 </head>
 <body>
@@ -22,8 +22,6 @@
             </ul>
         </div>
     </nav>
-    <div class="content">
-        @RenderBody()
-    </div>
+    @RenderBody()
 </body>
 </html>
