--- a/CS_460_Software_Engineering/HW4/Homework4/Homework4/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW4/Homework4/Homework4/Views/Shared/_Layout.cshtml
@@ -22,6 +22,164 @@
             </ul>
         </div>
     </nav>
-    @RenderBody()
+    <div class="content">
+        @RenderBody()
+    </div>
+
+    <!-- JavaScript: placed at the end of the document so the pages load faster -->
+    <!-- jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+    <!-- Popper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+
+    <!-- Latest compiled and minified Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+    <script>
+        function dayOfMonth(numOfDays) {
+            "use strict";
+
+            var sel = $('<select id="days" name="day">'); //what we're connecting the options to
+            var opt = null;
+            for (var i = 1; i <= numOfDays; i++) {
+                opt = $('<option value="' + i + '">').html(i);
+                opt.appendTo(sel);
+            }
+
+            return sel;
+        }
+
+        $("#year").change(function () {
+            var today = new Date();
+            var currentYear = today.getFullYear();
+
+            $("#errorMessage").empty();
+
+            if ($(this).val().length <= 0) {
+                $("#restOfDate").css("visibility", "hidden");
+                $("#submitForm").attr("disabled", "disabled");
+            }
+            else if (isValidDate())
+            {
+                if ($("#month").val() == 2) {
+                    var whichYear = $("#year").val();
+
+                    $("#daysContainer").empty();
+
+                    if (whichYear % 4 === 0) {
+                        $("#daysContainer").append("Day: ");
+                        $("#daysContainer").append(dayOfMonth(29));
+                    }
+                    else {
+                        $("#daysContainer").append("Day: ");
+                        $("#daysContainer").append(dayOfMonth(28));
+                    }
+                }
+
+                $("#restOfDate").css("visibility", "visible");
+                if ($("#submitForm").is(":disabled") && $("#firstname").val().length > 0) {
+                    $("#submitForm").removeAttr("disabled");
+                }
+            }
+            else {
+                $("#errorMessage").append("Hey, you can't have a birthday if you haven't been born yet!");
+                $("#restOfDate").css("visibility", "hidden");
+                $("#submitForm").attr("disabled", "disabled");
+            }
+        })
+
+        $("#firstname").change(function () {
+            if ($(this).val().length <= 0) {
+                $("#submitForm").attr("disabled", "disabled");
+            }
+            else {
+                if ($("#submitForm").is(":disabled") && $("#year").val().length > 0) {
+                    $("#submitForm").removeAttr("disabled");
+                }
+            }
+        })
+
+        $("#month").change(function () {
+            var whichMonth = $("#month").val();
+            var whichYear = $("#year").val();
+            var today = new Date();
+            var currentYear = today.getFullYear;
+
+            $("#daysContainer").empty();
+            $("#errorMessage").empty();
+
+            if (whichMonth == 1 || whichMonth == 3 || whichMonth == 5 || whichMonth == 7 || whichMonth == 8 || whichMonth == 9 || whichMonth == 10 || whichMonth == 12) {
+                $("#daysContainer").append("Day: ");
+                $("#daysContainer").append(dayOfMonth(31));
+            }
+            else if (whichMonth == 4 || whichMonth == 6 || whichMonth == 11) {
+                $("#daysContainer").append("Day: ");
+                $("#daysContainer").append(dayOfMonth(30));
+            }
+            else if (whichYear % 4 === 0) {
+                $("#daysContainer").append("Day: ");
+                $("#daysContainer").append(dayOfMonth(29));
+            }
+            else {
+                $("#daysContainer").append("Day: ");
+                $("#daysContainer").append(dayOfMonth(28));
+            }
+
+            if (isValidDate()) {
+                if ($("#submitForm").is(":disabled") && $("#firstname").val().length > 0) {
+                    $("#submitForm").removeAttr("disabled");
+                }
+            }
+            else {
+                $("#errorMessage").append("Hey, you can't have a birthday if you haven't been born yet!");
+                $("#submitForm").attr("disabled", "disabled");
+            }
+        })
+
+        $("#daysContainer").on("change", "#days", function () {
+            $("#errorMessage").empty();
+
+            if (isValidDate())
+            {
+                if ($("#submitForm").is(":disabled") && $("#firstname").val().length > 0) {
+                    $("#submitForm").removeAttr("disabled");
+                }
+            }
+            else
+            {
+                $("#errorMessage").append("Hey, you can't have a birthday if you haven't been born yet!");
+                $("#submitForm").attr("disabled", "disabled");
+            }
+        })
+
+        function isValidDate() {
+            var whichMonth = $("#month").val();
+            var whichYear = $("#year").val();
+            var whichDay = $("#days").val();
+            var today = new Date();
+
+            if (whichYear > today.getFullYear())
+            {
+                return false;
+            }
+            else if (whichYear == today.getFullYear())
+            {
+                if (whichMonth > (today.getMonth() + 1))
+                {
+                    return false;
+                }
+                else if (whichMonth == (today.getMonth() + 1))
+                {
+                    if (whichDay > today.getDate())
+                    {
+                        return false;
+                    }
+                }
+            }
+
+            return true;
+        }
+    </script>
 </body>
 </html>
